# real-time-ml-system

./: .gitignore  Makefile
services/trade_producer/: pyproject.toml
services/trade_producer/src/: kraken_websocket_api.py  main.py
